<resources>
    <string name="app_name">森SEN</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hint">提示</string>
    <string name="action_settings">Settings</string>
    <string name="sen">森</string>
    <string name="login_prompt">您的一站式婚宴助手</string>
    <string name="phone_number_hint">请输入手机号</string>
    <string name="search_hotel_hint">请输入酒店名称</string>
    <string name="verification_code_hint">请输入验证码</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="verification_code">验证码</string>
    <string name="login">登陆</string>
    <string name="employee_login_mode">采用员工账号登陆</string>
    <string name="phone_login_mode">采用手机注册登陆</string>
    <string name="second">秒</string>
    <string name="next_step">下一步</string>
    <string name="set_personal_info">设定个人信息</string>
    <string name="alipay">支付宝</string>
    <string name="alipay_account">支付宝账号</string>
    <string name="bank_card_account">银行卡账号</string>
    <string name="alipay_account_hint">支付宝账户(必填)</string>
    <string name="alipay_name_hint">支付宝姓名(必填)</string>
    <string name="alipay_message_hint">1.支付宝账号：10000@qq.com，支付宝姓名：张三丰\n2.只有绑定账号，才能提成哟</string>
    <string name="not_set_now">暂不设置，以后再说</string>
    <string name="person_info">个人信息</string>
    <string name="person_center">个人中心</string>
    <string name="user_feedback">用户反馈</string>
    <string name="guest_info_list">客资列表</string>
    <string name="type">类型</string>
    <string name="select_type_hint">请选择举办宴会类型</string>
    <string name="phone_number">手机号</string>
    <string name="verify_phone_number_hint">请输入受访者手机号</string>
    <string name="verify_now">立即验证</string>
    <string name="name">姓名</string>
    <string name="zfb_name">支付宝姓名</string>
    <string name="edit_name_hint">请输入受访者姓名</string>
    <string name="edit_guest_info">填写客资料信息</string>
    <string name="submit_guest_info">提交客资信息</string>
    <string name="submit_build_info">提交搭建信息</string>
    <string name="guest_info">客资信息</string>
    <string name="note_colon">备注:</string>
    <string name="note">备注</string>
    <string name="follow_time_colon">跟进时间:</string>
    <string name="status_colon">状态:</string>
    <string name="please_write_note">请填写备注信息</string>
    <string name="district">区域</string>
    <string name="item_select_hint">请选择对应信息</string>
    <string name="hotel">酒店</string>
    <string name="table_count">桌数</string>
    <string name="table_count_hint">请输入预计需要的桌数</string>
    <string name="budget">预算</string>
    <string name="budget_hint">请输入预计需要的预算</string>
    <string name="time">时间</string>
    <string name="time_hint">请选择大概的举办时间</string>
    <string name="follower">跟踪者</string>
    <string name="follower_hint">请输入跟踪者的账号</string>
    <string name="check_more">查看更多</string>
    <string name="follower_tip">跟踪方</string>
    <string name="contact_person">联系人</string>
    <string name="check_info">审核信息</string>
    <string name="problem_and_advice">问题和建议</string>
    <string name="your_phone_option">联系电话(选填)</string>
    <string name="submit_feedback">提交反馈</string>
    <string name="progress_wait">请稍候...</string>
    <string name="wedding_banquet">婚宴</string>
    <string name="business_affairs">会务</string>
    <string name="birthday_group_baby">生日宴、团宴、宝宝宴</string>
    <string name="exit_login">退出登录</string>
    <string name="feedback_hint">请描述您的问题</string>
    <string name="select">选择</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="hotel_selected">已选酒店</string>
    <string name="specify_position">指定位置</string>
    <string name="list_no_data_tip">一份客资，一份收入</string>
    <string name="add_guest_info">添加客资信息</string>
    <string name="verification_send_success">验证码正火速赶来</string>
    <string name="login_success">登陆成功</string>
    <string name="phone_number_can_not_empty">手机号不能为空</string>
    <string name="account_can_not_empty">账户不能为空</string>
    <string name="password_can_not_empty">密码不能为空</string>
    <string name="phone_number_wrong_format">手机号格式错误</string>
    <string name="code_can_not_empty">验证码不能为空</string>
    <string name="code_wrong_format">验证码格式错误</string>
    <string name="save">保存</string>
    <string name="alipay_empty">支付宝账号不能为空</string>
    <string name="alipay_info_empty">支付宝信息不能为空</string>
    <string name="bank_info_empty">银行信息不能为空不能为空</string>
    <string name="request_error_tip">请求异常，请稍后再试</string>
    <string name="data_error_tip">返回数据错误</string>
    <string name="bind_success">绑定成功</string>
    <string name="update_success">更新成功</string>
    <string name="select_order_type_hint">请选择类型</string>
    <string name="verify_guest_phone">验证受访者手机</string>
    <string name="verify_success">验证成功</string>
    <string name="feedback_content_empty">反馈内容为空</string>
    <string name="feedback_success">反馈成功</string>
    <string name="name_empty_hint">姓名不能为空</string>
    <string name="area_or_hotel_not_select">区域或酒店未选择</string>
    <string name="note_can_not_be_empty">备注不能为空</string>
    <string name="create_success">创建成功</string>
    <string name="guest_info_processing">客资信息正在处理，请耐心等候</string>
    <string name="kezi_info_detail">客资详情</string>
    <string name="build_info_detail">搭建详情</string>
    <string name="schedule_loading">努力加载中...</string>
    <string name="loading_failed">数据加载错误，点击重试</string>
    <string name="no_more_data">没有更多订单了</string>
    <string name="empty_data">没有数据</string>
    <string name="abnormal">网络异常,请稍后重试</string>
    <string name="refresh">刷新</string>
    <string name="request_error">请求异常，请稍后重试</string>
    <string name="contract_review">合同审核</string>
    <string name="contract_detail">合同明细</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="account_hint">请输入账号</string>
    <string name="password_hint">请输入密码</string>
    <string name="password_reset">修改密码</string>
    <string name="password_original">原始密码</string>
    <string name="password_original_hint">请输入密码</string>
    <string name="password_new">新密码</string>
    <string name="password_new_hint">请输入新密码</string>
    <string name="password_confirm">确认新密码</string>
    <string name="password_confirm_hint">请再次确认新密码</string>
    <string name="reset">重置</string>
    <string name="receive_kezi_asyn">接收客资同步信息</string>
    <string name="follow_log">跟进日志</string>
    <string name="pay_log">支付日志</string>
    <string name="next_follow">下次跟进</string>
    <string name="note_content">备注内容</string>
    <string name="note_time">备注时间</string>
    <string name="info_provide">信息提供</string>
    <string name="info_follow">信息跟进</string>
    <string name="create_kezi_info">新建客资信息</string>
    <string name="create_build_info">新建搭建信息</string>
    <string name="kezi_follow">客资跟进</string>
    <string name="build_info">搭建信息</string>
    <string name="build_detail">搭建详情</string>
    <string name="tip_order_waiting_for_settlement">客资奖励即将发放，请确保收款账户正确无误</string>
    <string name="tip_build_waiting_for_settlement">搭建奖励即将发放，请确保收款账户正确无误</string>
    <string name="tip_order_settlemented">客资奖励已发放</string>
    <string name="tip_build_settlemented">搭建奖励已发放</string>
    <string name="tip_order_finish">客资订单已完结</string>
    <string name="tip_order_cancel">客资信息已终止跟进</string>
    <string name="tip_build_cancel">搭建信息已终止跟进</string>
    <string name="modify_and_resubmit">修改并重新提交</string>
    <string name="process_status">处理状态</string>
    <string name="process_schedule">处理进度</string>
    <string name="process_time">处理时间</string>
    <string name="no_data">暂无数据，点击重试</string>
    <string name="distinct_no_hotel">暂无酒店数据</string>
    <string name="contact_clients">联系客户</string>
    <string name="select_next_follow_up">请选择天数</string>
    <string name="submit_certificate">提交凭证</string>
    <string name="submit_review">提交审核</string>
    <string name="confirm_sign">确认签单</string>
    <string name="contract_certificate">合同凭证</string>
    <string name="next_time_pay_time">下次支付时间</string>
    <string name="middle_pay_time">中款支付时间</string>
    <string name="contract_certificate_pic_tip">在此上传（合同）与（收据）照片</string>
    <string name="contract_time">合同时间</string>
    <string name="contract_money">合同金额</string>
    <string name="contract_money_can_not_empey">合同金额不能为空</string>
    <string name="first_sale_money_can_not_empey">首付金额不能为空</string>
    <string name="middle_money">中款金额</string>
    <string name="tail_money">尾款金额</string>
    <string name="tail_time">尾款时间</string>
    <string name="additional_money">附加款金额</string>
    <string name="first_sale_amount">首款金额</string>
    <string name="first_sale_amount_hit">请输入首付金额</string>
    <string name="tail_time_hit">请选择尾款时间</string>
    <string name="middle_time_hit">请选择中款时间</string>
    <string name="apply_time_hit">请选择申请时间</string>
    <string name="held_time">举办时间</string>
    <string name="held_time_hint">请选择举办时间</string>
    <string name="first_sale_time">首款时间</string>
    <string name="pay_time">支付时间</string>
    <string name="contract_money_tip">请输入合同金额</string>
    <string name="input_contract_money_tip">请输入金额</string>
    <string name="sign_up_time">签单时间</string>
    <string name="sign_up_time_tip">请输入签单时间</string>
    <string name="review_progress">审核进度</string>
    <string name="to_review_message">该签单信息正在被审核，请耐心等待^_^</string>
    <string name="reviewed_message">该合同已审核通过！\n相关的奖励后续将经过支付宝转账给您，请确保收款账号的有效。</string>
    <string name="settlemented_message">相关奖励已经发放！</string>
    <string name="fail_message">你提交的合同审核失败！</string>
    <string name="ballroom">宴会厅</string>
    <string name="banquet_menu">宴会菜单</string>
    <string name="address">地址</string>
    <string name="phone">电话</string>
    <string name="action_success">操作成功</string>
    <string name="try_again">点击重试</string>
    <string name="submit_settlement">提交结算</string>
    <string name="has_settlemented">已结算</string>
    <string name="has_rejected">已驳回</string>
    <string name="has_canceled">已取消</string>
    <string name="detail_following_tip">跟进中（跟踪者处理中）</string>
    <string name="detail_wait_settlement_tip">待结算（等待财务转账）</string>
    <string name="detail_settlemented_tip">已结算</string>
    <string name="detail_canceled_tip">已取消（已终止客资跟进）</string>
    <string name="my_commission">我的佣金</string>
    <string name="total_commission">总佣金</string>
    <string name="commission_released">已发放</string>
    <string name="commission_not_released">未发放</string>
    <string name="set_receipt_account">设定收款账号</string>
    <string name="set_info_synchronize">设定信息同步</string>
    <string name="open_band_account">开户行账号</string>
    <string name="open_band_account_tip">请输入开户行账号</string>
    <string name="open_band">开户行</string>
    <string name="open_band_tip">请输入开户行</string>
    <string name="open_account_name">开户名</string>
    <string name="open_account_name_tip">请输入开户名</string>
    <string name="receipt_account_alipay">收款账号（支付宝）</string>
    <string name="receipt_account_bank">收款账号（银行卡）</string>
    <string name="set_receipt_type">收款类型</string>
    <string name="account_alipay">支付宝账号</string>
    <string name="account_bank">银行卡账号</string>
    <string name="choose_check_distinct">选择查看区域</string>
    <string name="build_follow">搭建跟踪</string>
    <string name="my_recommend">我的推荐</string>
    <string name="my_follow">我的跟踪</string>
    <string name="original_password_can_not_empty">原密码不能为空</string>
    <string name="new_password_can_not_empty">新密码不能为空</string>
    <string name="password_can_not_match">两次新密码不一致</string>
    <string name="reset_password_success">修改密码成功</string>
    <string name="apply_time">申请时间</string>
    <string name="apply_modify_rest_time">申请修改尾款时间</string>
    <string name="apply_modify_held_time">申请修改举办时间</string>
    <string name="process">操作</string>
    <string name="original_time">原定时间</string>
    <string name="restaurant_detail">宴会厅详情</string>
    <string name="rmb_symbol">¥</string>
    <string name="table">桌</string>
    <string name="table_count_colon">桌数：</string>
</resources>