<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data class="LoginActivityBinding">

        <variable
            name="clickListener"
            type="android.view.View.OnClickListener" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="75dp"
                android:layout_marginTop="80dp"
                android:layout_height="75dp"
                android:background="@mipmap/logo" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textColor="@color/theme_color"
                android:gravity="center_horizontal"
                android:text="@string/login_prompt"
                android:textSize="@dimen/text_size_m" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="30dp"
            android:paddingTop="50dp"
            android:paddingRight="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="#F0E68C"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#F08080" />

                <TextView
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:background="#9E9E9E" />

                <sen.wedding.com.weddingsen.component.ClearEditText
                    android:id="@+id/et_user_name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#00000000"
                    android:gravity="center_vertical"
                    android:hint="@string/phone_number_hint"
                    android:paddingRight="10dp"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="#A2B5CD"
                    android:textSize="@dimen/text_size_l" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_provider_verification"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="#F0E68C"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:background="#F08080" />

                <TextView
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="12dp"
                    android:layout_marginTop="12dp"
                    android:background="#9E9E9E" />

                <EditText
                    android:id="@+id/et_verification"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="#00000000"
                    android:gravity="center_vertical"
                    android:hint="@string/verification_code_hint"
                    android:maxLines="1"
                    android:paddingLeft="10dp"
                    android:singleLine="true"
                    android:textColorHint="#A2B5CD"
                    android:textSize="@dimen/text_size_l" />

                <TextView
                    android:id="@+id/tv_get_verification"
                    android:layout_width="90dp"
                    android:layout_height="match_parent"
                    android:background="#FFAEB9"

                    android:gravity="center"
                    android:onClick="@{clickListener}"
                    android:text="@string/get_verification_code"
                    android:textColor="#ffffff" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="15dp"
                android:background="#F0E68C"
                android:gravity="center"
                android:onClick="@{clickListener}"
                android:text="@string/login"
                android:textColor="@color/text_common"
                android:textSize="@dimen/text_size_xl"></TextView>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tv_switch"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/employee_login_mode" />

            <TextView
                android:layout_width="15dp"
                android:layout_height="15dp"
                android:layout_marginLeft="5dp"
                android:background="#F08080" />
        </LinearLayout>

    </LinearLayout>


</layout>